--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -28,7 +28,7 @@
         </li>
         <li class="list-group-item d-flex
                    justify-content-between align-items-center">
-          Всего постов автора: {{ count }}
+          Всего постов автора: {{ post.author.posts.count }}
         </li>
         <li class="list-group-item">
           <a href="{% url 'posts:profile' post.author.username %}">
